Version 2.7.10dev:

* Map Mod+cursors to Amiga cursor keys (useful with joystick emulation).

Version 2.7.9dev:

* Plugin layout changed - new plugins must be downloaded.
* Detect screen refresh rate for correct display with multiple displays.
* Simplified video_sync option (is a boolean now).
* Low latency vsync is enabled by default.

Version 2.7.8dev:

* Disable use of fullscreen spaces on OS X by default. Use
  SDL_VIDEO_MAC_FULLSCREEN_SPACES = 1 (advanced settings or environment) if
  you want to re-enable it.
* Fixed a crash when using (experimental and) unsupported re-recording.

Version 2.7.7dev:

* Compile with hardening disabled for Fedora 23+.
* Automatically scan $BASE/AmigaForever/Amiga Files/Shared/rom for Kickstarts.

Version 2.7.6dev:

* Fix AGA flickering bug introduced in 2.5.40dev.
* Do not use R12 register in x86-64 JIT due to addressing issue.
* Lowered default floppy drive sound volume.
* Warn when uae_cachesize is used without jit_compiler enabled.
* Theme options override options from config.
* Updated emulation core from WinUAE 3220.

Version 2.7.5dev:

* Fix abort in OpenAL on OS X on shutdown.
* On x86-64, do not try to use "32-bit memory" unless JIT is enabled.
* If x87_fldcw dynamic function cannot be created, fall back to inline asm.
* Fix loading controller configs from non-ASCII paths on Windows.
* Better (build-time) OpenAL detection on OS X.
* New configure option --with-libmpeg2=yes/builtin (no won't work yet),
  defaults to yes (using system library).
* Fix additional custom joystick ports.
* New boolean option full_keyboard to set the initial state.
* Auto-choose joystick device for port 0 when not started in mouse mode.
* Support deflate compression in fs-uae.dat.
* Updated emulation core from WinUAE 3210.

Version 2.7.4dev:

* New action_mute_floppy_sounds, mapped to MOD+N by default.
* Added support for audioprev, audionext, audiostop, audioplay keys.